@@ -1,7 +1,6 @@
 # -*- coding: utf-8 -*-
-# from dataclasses import dataclass, field
 from pathlib import Path
-from typing import List, Union, Optional
+from typing import List, Optional
 
 from pydantic import BaseModel, Field
 
