@@ -12,7 +12,7 @@ from fastflix.language import t
 from fastflix.models.encode import SubtitleTrack
 from fastflix.models.fastflix_app import FastFlixApp
 from fastflix.resources import down_arrow_icon, up_arrow_icon, loading_movie
-from fastflix.shared import error_message, main_width, no_border
+from fastflix.shared import error_message, no_border
 from fastflix.widgets.panels.abstract_list import FlixList
 from fastflix.widgets.background_tasks import ExtractSubtitleSRT
 
